# final-project-bladepyrunner

./: .gitignore  FINAL_CODE.py  README.md  RODRIGO_code_final.py  Untitled-1.py  gitignore.txt  main.py  main_code.ipynb  pyproject.toml
examples/: FINAL_CODE.py  main.py  main_code.ipynb  wind_data_class.py
src/: Capacity_Factor.py  Capacity_Factor_Class.py  ComputeAEP.py  Interpolate.py  Load_Data.py  Mean_Wind_Speeds.py  Power_Law_Profile.py  __init__.py  plots.py  turbine.py  weibull.py
tests/: test_Capacity_Factor_Calculator  test_Capacity_Factor_Calculator.py  test_FINAL_CODE.py  test___init__.py  test_funcs.py  test_main.py  test_turbine.py  test_wind_data_class.py
